# SparkDistill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: dataset_registry.yml  training_track.yml  update_canonical_pin.yml
.gittensor/: weights.json
datasets/: README.md  canonical.json  registry.jsonl
docs/: index.html  miner-guide.md
eval/: attestation.py  attested_samples.py  benchmarks.py  canonical_dataset.py  dataset_verify.py  export_gsm8k_regression_sample.py  fair_dataset_label.py  frontier.py  frontiers.py  gsm8k_eval.py  mining_dataset.py  mix_registry.py  prepare_mining_sft.py  registry_gate.py  regression_sample.py  score.py  train_prep.py  training_gpus.py  training_track_gate.py  triton_bench.py  update_canonical_pin.py  verify.py
eval/data/: gsm8k_fewshot_5.jsonl  gsm8k_regression_50.jsonl
proof/: bundle.py
recipes/qwen3.5-4b-phase1/: README.md  sft-mining.yaml  sft.yaml
runs/: README.md  frontiers.json
runs/2026-07-11-qwen3.5-4b-mining-001/: attestation.json  proof_verify_report.json  result.json
scripts/: eval.sh  install_serve.sh  install_train.sh  prepare_mining_sft.sh  republish_mining.sh  train.sh  update_canonical_pin.sh
tests/: test_attestation.py  test_attested_samples.py  test_bundle.py  test_canonical_dataset.py  test_fair_dataset_label.py  test_frontier.py  test_frontiers.py  test_gsm8k_eval.py  test_mining_dataset.py  test_prepare_mining_sft.py  test_registry_gate.py  test_regression_sample.py  test_score.py  test_train_prep.py  test_training_gpus.py  test_training_track_pin_grace.py  test_triton_bench.py  test_verify.py
tritonbench/configs/: default.yaml  eval_quick.yaml
